--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.conteudo {
+  min-height: calc(100vh - 2rem);
+  min-width: 303px;
+  padding: 1rem;
+  margin: 1rem;
+  border: 1px solid gray;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  transition: all 6s ease 1s; /* Alteração aqui para especificar apenas a propriedade de transição necessária */
 }
 
-.App-link {
-  color: #61dafb;
+.direita {
+  min-width: calc(30vw - 3.5rem);
+  padding: 1rem;
+  margin: 1rem 0.5rem 1rem 1rem;
+  border: 1px solid gray;
+  flex-grow: 1; /* Add this line */
+  opacity: 1; /* Alteração aqui */
+  transition-duration: 300ms;
+  transition-property: opacity, display, visibility;
+  transition-delay: 300ms;
+  display: inherit;
+  /* .transition-property(opacity, visibility); */
+  /* .transition-delay(0, 200ms); */
+  /* transition: opacity 6s ease 1s; Alteração aqui para especificar apenas a propriedade de transição necessária */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.esquerda {
+  min-width: calc(70vw - 3.5rem);
+  padding: 1rem;
+  margin: 1rem 1rem 1rem 0.5rem;
+  border: 1px solid gray;
+  flex-grow: 1; /* Add this line */
+}
+
+@media screen and (max-width: 600px) {
+  .direita {
+    opacity: 0; /* Alteração aqui */
+    pointer-events: none; /* Para desativar interações com o elemento oculto */
+    min-width: none;
+    min-height: none;
+    width: 0;
+    height: 0;
+    padding: 0px;
+    border: none;
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+
+  .esquerda {
+    width: calc(100vw - 6rem);
+    transition: all 6s ease; /* Alteração aqui para especificar apenas a propriedade de transição necessária */
   }
 }
