--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   border: 1px solid gray;
   display: flex;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .direita {
@@ -17,6 +18,8 @@
   margin: 10px 10px 10px 10px;
   border: 1px solid gray;
   border-radius: 10px;
+  background-color: grey;
+  overflow: hidden;
 }
 
 .esquerda {
@@ -25,6 +28,7 @@
   margin: 10px 10px 10px 10px;
   border: 1px solid gray;
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .exibirDireitaProCima {
