--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,88 @@
+:root {
+  --branco-100: #fff;
+  --branco-200: #eff2f4;
+  --primary-600: #0c7fda;
+  /* Letras */
+  --cinza-600: #5d7285;
+
+  --azul-500: #e9f5fe;
+
+  /* font-weight:  */
+  --regular-400: 400;
+  --simi-bold-600: 600;
+
+  color: var(--cinza-600);
+  line-height: 25px;
+  fill: var(--cinza-600);
+}
+
 .conteudo {
   min-height: calc(100vh - 2rem);
   min-width: 248px;
-  padding: 10px;
   margin: 10px;
-  border: 1px solid gray;
+  /* border: 1px solid gray; */
   display: flex;
-  border-radius: 10px;
   overflow: hidden;
+  background-color: var(--branco-200);
 }
 
 .direita {
-  width: 15vw;
-  min-width: 150px;
-  min-height: calc(100vh - 74px);
-  height: fit-content;
-  padding: 10px;
-  margin: 10px 10px 10px 10px;
-  border: 1px solid gray;
-  border-radius: 10px;
-  background-color: grey;
+  min-width: 340px;
+  min-height: 100%;
+  /* border: 1px solid gray; */
+  background-color: var(--branco-100);
   overflow: hidden;
+}
+
+.brand-navlist {
+  margin-top: 30px;
+  margin-left: 25px;
+}
+
+.nav-icons {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 290px;
+  margin-bottom: 15px;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  border: none;
+}
+
+.nav-text {
+  font-size: 16px;
+  font-weight: var(--regular-400);
+  padding-top: 4px;
+}
+
+.selecionado {
+  fill: var(--primary-600) !important;
+  background-color: var(--azul-500);
+  border-radius: 5px;
+  font-weight: var(--simi-bold-600);
+  color: var(--primary-600);
+}
+
+.brand {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
+.brand-title {
+  font-weight: var(--simi-bold-600);
+  font-size: 24px;
+
+  letter-spacing: 0.5px;
+  margin-left: 15px;
+  font-family: "Epilogue", "Courier New", Courier, monospace;
 }
 
 .esquerda {
   flex-grow: 1;
-  padding: 10px;
-  margin: 10px 10px 10px 10px;
-  border: 1px solid gray;
-  border-radius: 10px;
+  /* border: 1px solid gray; */
   overflow: hidden;
 }
 
