--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --primary-600: #0c7fda;
   /* Letras */
   --cinza-600: #5d7285;
+  --cinza-700: #667a8a;
 
   --azul-500: #e9f5fe;
 
@@ -39,32 +40,6 @@
   margin-left: 25px;
 }
 
-.nav-icons {
-  display: flex;
-  align-items: center;
-  height: 50px;
-  width: 290px;
-  margin-bottom: 15px;
-  background-color: transparent;
-  outline: none;
-  cursor: pointer;
-  border: none;
-}
-
-.nav-text {
-  font-size: 16px;
-  font-weight: var(--regular-400);
-  padding-top: 4px;
-}
-
-.selecionado {
-  fill: var(--primary-600) !important;
-  background-color: var(--azul-500);
-  border-radius: 5px;
-  font-weight: var(--simi-bold-600);
-  color: var(--primary-600);
-}
-
 .brand {
   display: flex;
   align-items: center;
@@ -74,7 +49,6 @@
 .brand-title {
   font-weight: var(--simi-bold-600);
   font-size: 24px;
-
   letter-spacing: 0.5px;
   margin-left: 15px;
   font-family: "Epilogue", "Courier New", Courier, monospace;
@@ -102,4 +76,41 @@
   .esquerda {
     margin: 10px 10px 10px 10px;
   }
+}
+
+.botton-nav {
+  margin-top: 0px;
+  height: 125px;
+  width: 290px;
+}
+
+.darkmode {
+  height: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.buttonLogout {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  width: 290px;
+  margin-bottom: 10px;
+  background-color: var(--cinza-700);
+  outline: none;
+  cursor: pointer;
+  border: none;
+  padding-left: 10px;
+  border-radius: 5px;
+  fill: var(--branco-100);
+}
+
+.buttonText {
+  font-size: 16px;
+  font-weight: var(--regular-400);
+  padding-top: 4px;
+  margin-left: 10px;
+  font-weight: var(--simi-bold-600);
+  color: var(--azul-500);
 }
