--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,8 @@
 }
 
 .conteudo {
-  min-height: calc(100vh - 2rem);
+  min-height: calc(100vh);
   min-width: 248px;
-  margin: 10px;
-  /* border: 1px solid gray; */
   display: flex;
   overflow: hidden;
   background-color: var(--branco-200);
@@ -30,9 +28,18 @@
 .direita {
   min-width: 340px;
   min-height: 100%;
-  /* border: 1px solid gray; */
   background-color: var(--branco-100);
   overflow: hidden;
+
+  filter: drop-shadow(0px 4px 40px rgba(0, 0, 0, 0.04));
+
+  z-index: 2;
+}
+
+.esquerda {
+  flex-grow: 1;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .brand-navlist {
@@ -40,77 +47,27 @@
   margin-left: 25px;
 }
 
-.brand {
-  display: flex;
-  align-items: center;
-  margin-bottom: 50px;
-}
-
-.brand-title {
-  font-weight: var(--simi-bold-600);
-  font-size: 24px;
-  letter-spacing: 0.5px;
-  margin-left: 15px;
-  font-family: "Epilogue", "Courier New", Courier, monospace;
-}
-
-.esquerda {
-  flex-grow: 1;
-  /* border: 1px solid gray; */
-  overflow: hidden;
-}
-
 .exibirDireitaProCima {
-  margin-left: 10px !important;
+  margin-left: 0px !important;
   transition: margin-left 0.7s linear;
+}
+
+.top-white {
+  width: 100%;
+  height: 150px;
+  background-color: var(--branco-100);
+}
+
+.site {
+  padding: 30px;
 }
 
 @media screen and (max-width: 600px) {
   .direita {
     position: absolute;
     margin-left: -55vh;
-    width: 50vw;
     transition: margin-left 0.7s linear;
+    width: 100px;
+    min-width: initial;
   }
-
-  .esquerda {
-    margin: 10px 10px 10px 10px;
-  }
-}
-
-.botton-nav {
-  margin-top: 0px;
-  height: 125px;
-  width: 290px;
-}
-
-.darkmode {
-  height: 50%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.buttonLogout {
-  display: flex;
-  align-items: center;
-  height: 40px;
-  width: 290px;
-  margin-bottom: 10px;
-  background-color: var(--cinza-700);
-  outline: none;
-  cursor: pointer;
-  border: none;
-  padding-left: 10px;
-  border-radius: 5px;
-  fill: var(--branco-100);
-}
-
-.buttonText {
-  font-size: 16px;
-  font-weight: var(--regular-400);
-  padding-top: 4px;
-  margin-left: 10px;
-  font-weight: var(--simi-bold-600);
-  color: var(--azul-500);
 }
